--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -9,116 +9,126 @@
 <h2>Beginnerscursussen</h2>
 
 <p class="textw">
-    Na de cursus kunt u <a href="lidmaatschap.html">lid</a> worden om verder te kunnen blijven schieten bij de club en mee te doen aan activiteiten.
-    </p>
-    <hr>
-        <h3>Cursus 1. Recurve schieten</h3>
-        <p class="textw">
-    Deze bestaat uit 10 lessen van een uur en wordt twee keer per jaar georganiseerd, voor en najaar. 
-    De groep bestaat uit maximaal 8 cursisten. Voor de cursus hoeft u zelf geen materiaal te hebben, 
-    huur van boog, pijlen en andere attributen zijn in de prijs van de cursus inbegrepen.
-        </p>
-        <table style="width: 250px;">
-            <tr>
-                <th colspan="2" style="text-align: center;">
-                Prijzen beginnerscursus Recurve
-                </th>
-            </tr>
-            <tr>
-                <td>Jeugd, 12 t/m 17 jaar</td>
-                <td>&euro; 80,00</td>
-            </tr>
-            <tr>
-                <td>Studenten</td>
-                <td>&euro; 80,00</td>
-            </tr>
-            <tr>
-                <td>Volwassenen, v.a. 18 jaar</td>
-                <td>&euro; 100,00</td>
-            </tr>
-        </table>
-
-
-        <h4>Wanneer?</h4>
-
-        <p class="textw">
-        Er zijn twee beginnerscursussen per jaar;
-        </p>
-        <ul>
-            <li>Een begint op de laatste vrijdag van september</li>
-            <li>De ander op de 3e vrijdag van januari</li>
-        </ul>
-
-        <p class="textw">
-        Voor elke cursus is er ruimte voor 8 schutters, de selectie
-        gebeurt op volgorde van aanmelding.<br>
-        Er is geen mogelijkheid voor privé lessen.
-            </p>
-
-
-            <h4>Les schema</h4>
-
-            <p class="textw">
-        De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van 19.30 tot
-        20.30 uur.<br>
-        De lessen beginnen om 19:30, graag willen we dan beginnen met de les, kom dus iets
-        eerder om je boog alvast te pakken.
-                </p>
-                <hr>
-
-                    <h3>Cursus 2. Traditioneel schieten</h3>
-                    <p class="textw">
- De cursus Traditioneel schieten (met houten boog zonder richtmiddelen) bestaat uit 5 lessen van een uur en wordt één keer per jaar georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5 cursisten.
-                    </p>
-                    <table style="width: 250px;">
-                        <tr>
-                            <th colspan="2" style="text-align: center;">
-                Prijzen beginnerscursus Traditioneel
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>Jeugd, 12 t/m 17 jaar</td>
-                            <td>&euro; 40,00</td>
-                        </tr>
-                        <tr>
-                            <td>Studenten</td>
-                            <td>&euro; 40,00</td>
-                        </tr>
-                        <tr>
-                            <td>Volwassenen, v.a. 18 jaar</td>
-                            <td>&euro; 50,00</td>
-                        </tr>
-                    </table>
-                    <p class="textw">
-    Ook voor deze cursus hoeft  u niets mee te nemen.<br>
-                            <br>
-    Wilt u na deze cursus toch recurve gaan schieten dan kunt u 5 extra lessen recurve volgen.
-                            </p>
-
-                            <hr> 
-
-
-                                <h3>Aanmelden?</h3>
-
-                                <p class="textw">
-        U kunt zich aanmelden via <a href="{% url '/aanmelden.html' %}">
-                                        <b>dit formulier</b>
-                                    </a> op de website. Daar moet u onder andere
-        uw naam, adres, telefoonnummer en email invullen, en kiezen aan
-        welke beginnerscursus u mee wilt doen. Om de inschrijving
-        definitief te maken moet u de helft van het cursus geld
-        overmaken naar de Geronimorekening. Tijdens de cursus krijgt u
-        alle materiaal van de club, wel is het handig strakke kleding
-        aan te doen en makkelijke loop schoenen. 
-        Neem <a href="{% url '/contact.html' %}">
-                                        <b>contact</b>
-                                    </a> op met de
-                                    <a id="email_6" href="#">
-                                        <b>secretaris</b>
-                                    </a> voor meer informatie.
-                                </p>
     Geronimo verwelkomt graag aspirant leden. Bent u geïnteresseerd, dan
     kunt u één van onze cursussen volgen.<br>
+    Na de cursus kunt u <a href="lidmaatschap.html">lid</a> worden om
+    verder te kunnen blijven schieten bij de club en mee te doen aan
+    activiteiten.
+</p>
+
+<hr>
+
+<h3>Cursus 1. Recurve schieten</h3>
+
+<p class="textw">
+    Deze bestaat uit 10 lessen van een uur en wordt twee keer per jaar
+    georganiseerd, voor en najaar. De groep bestaat uit maximaal 8
+    cursisten. Voor de cursus hoeft u zelf geen materiaal te hebben,
+    huur van boog, pijlen en andere attributen zijn in de prijs van de
+    cursus inbegrepen.
+</p>
+
+<table style="width: 250px;">
+    <tr>
+        <th colspan="2" style="text-align: center;">
+        Prijzen beginnerscursus Recurve
+        </th>
+    </tr>
+    <tr>
+        <td>Jeugd, 12 t/m 17 jaar</td>
+        <td>&euro; 80,00</td>
+    </tr>
+    <tr>
+        <td>Studenten</td>
+        <td>&euro; 80,00</td>
+    </tr>
+    <tr>
+        <td>Volwassenen, v.a. 18 jaar</td>
+        <td>&euro; 100,00</td>
+    </tr>
+</table>
+
+
+<h4>Wanneer?</h4>
+
+<p class="textw">
+    Er zijn twee beginnerscursussen per jaar;
+</p>
+
+<ul>
+    <li>Een begint op de laatste vrijdag van september</li>
+    <li>De ander op de 3e vrijdag van januari</li>
+</ul>
+
+<p class="textw">
+    Voor elke cursus is er ruimte voor 8 schutters, de selectie
+    gebeurt op volgorde van aanmelding.<br>
+    Er is geen mogelijkheid voor privé lessen.
+</p>
+
+
+<h4>Les schema</h4>
+
+<p class="textw">
+    De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van
+    19.30 tot 20.30 uur.<br>
+    De lessen beginnen om 19:30, graag willen we dan beginnen met de les,
+    kom dus iets eerder om je boog alvast te pakken.
+</p>
+
+<hr>
+
+<h3>Cursus 2. Traditioneel schieten</h3>
+
+<p class="textw">
+    De cursus Traditioneel schieten (met houten boog zonder richtmiddelen)
+    bestaat uit 5 lessen van een uur en wordt één keer per jaar
+    georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5
+    cursisten.
+</p>
+
+<table style="width: 250px;">
+    <tr>
+        <th colspan="2" style="text-align: center;">
+            Prijzen beginnerscursus Traditioneel
+        </th>
+    </tr>
+    <tr>
+        <td>Jeugd, 12 t/m 17 jaar</td>
+        <td>&euro; 40,00</td>
+    </tr>
+    <tr>
+        <td>Studenten</td>
+        <td>&euro; 40,00</td>
+    </tr>
+    <tr>
+        <td>Volwassenen, v.a. 18 jaar</td>
+        <td>&euro; 50,00</td>
+    </tr>
+</table>
+
+<p class="textw">
+    Ook voor deze cursus hoeft u niets mee te nemen.<br>
+    Wilt u na deze cursus toch recurve gaan schieten dan kunt u 5 extra
+    lessen recurve volgen.
+</p>
+
+<hr> 
+
+<h3>Aanmelden?</h3>
+
+<p class="textw">
+    U kunt zich aanmelden via
+    <a href="{% url '/aanmelden.html' %}"><b>dit formulier</b></a> op de
+    website. Daar moet u onder andere uw naam, adres, telefoonnummer en
+    email invullen, en kiezen aan welke beginnerscursus u mee wilt doen.
+    Om de inschrijving definitief te maken moet u de helft van het
+    cursus geld overmaken naar de Geronimorekening. Tijdens de cursus
+    krijgt u alle materiaal van de club, wel is het handig strakke
+    kleding aan te doen en makkelijke loop schoenen. Neem
+    <a href="{% url '/contact.html' %}"><b>contact</b></a> op met de
+    <a id="email_6" href="#"><b>secretaris</b></a> voor meer informatie.
+</p>
 
 {% endblock %}
 
