--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -29,47 +29,12 @@
 
     <h3>Aanmeld formulier</h3>
 
-    <form style="font-weight:bold;" enctype="multipart/form-data" method="post"
-          action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8">
-        <input type="hidden" name="acctid" id="acctid" value="ln8heofy2a2r60iy">
-        <input type="hidden" name="formid" id="formid" value="862973">
-        <input type="hidden" name="required_vars" id="required_vars"
-               value="naam,adres,postcode,woonplaats,geboorte,telefoon,email,datum">
-        <p>
-            Naam:<br>
-            <input type="text" name="naam" id="naam" size="50" value="">
-        </p>
-        <p>
-            Adres:<br>
-            <input type="text" name="adres" id="adres" size="50" value="">
-        </p>
-        <table>
-            <tr><td>Postcode:</td><td>Woonplaats:</td></tr>
-            <tr><td><input type="text" name="postcode" id="postcode" size="10" value=""></td>
-                <td><input type="text" name="woonplaats" id="woonplaats" size="33" value=""></td></tr>
-        </table>
-        <p>
-            Geboortedatum:<br>
-            <input type="text" name="geboorte" id="geboorte" size="22" value="">
-        </p>
-        <p>
-            Telefoonnummer:<br>
-            <input type="text" name="telefoon" id="telefoon" size="22" value="">
-        </p>
-        <p>
-            Email:<br>
-            <input type="text" name="email" id="email" size="22" value="">
-        </p>
-
-        <p style="font-weight:normal;"><b>Beginnerscursus:</b><br>
-            <input type="radio" name="datum" id="datum_1" value="Januari 2016" disabled> Januari 2016 (vol)<br>
-            <input type="radio" name="datum" id="datum_2" value="Oktober 2016"> Oktober 2016<br>
-            <input type="radio" name="datum" id="datum_3" value="Januari 2017"> Januari 2017<br>
-            <input type="radio" name="datum" id="datum_4" value="Oktober 2017"> Oktober 2017<br>
-        </p>
-        <input type="submit" value=" Verstuur aanmelding "><br>
-    </form>
+    <div class="cognito">
+        <script src="https://services.cognitoforms.com/s/vs6FWsIiSEGGFdPsq90Erg"></script>
+        <script>Cognito.load("forms", { id: "1" });</script>
+    </div>
 {% endblock %}
+
 {% block script %}
     var _mailt = "mailto:",
         _extger = "shs-geronimo.org",
