--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 7 mei, 2014</p>
+    <p style="font-style: italic;">Per 16 oktober, 2015</p>
 
     <ul>
         <li>
@@ -32,7 +32,7 @@
             <a id="email_rayon" href="#">Jeffrey Maagdenberg</a> &ndash; vicevoorzitter en rayonzaken
         </li>
         <li>
-            <a id="email_sec" href="#">Erik van de Brug</a> &ndash; secretaris
+            <a id="email_sec" href="#">Gerwin Postma</a> &ndash; secretaris
             <ul>
                 <li>Aanspreekpunt nieuwe cursisten</li>
                 <li>Ledenlijst</li>
