Remove or fix broken links
Update contact variables.

--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -41,13 +41,9 @@
         <li><a href="{% url '/uitslagen/koningschieten.html' %}">Koningschieten</a></li>
     </ul>
 
-    <h2>Externe wedstrijden (buiten onze club):</h2>
+    <h2>Externe wedstrijden (buiten onze club)</h2>
     <p>
         Voor een volledig overzicht, zie:
-        <a href="http://www.handboogsport.nl/kalender/" target="_blank">Algemene Wedstrijdkalender</a>
+        <a href="http://www.handboogsport.nl/kalender/" target="_blank">Algemene Wedstrijdkalender NHB</a>
     </p>
-    <ul>
-        <li><a href="http://www.zwartmikkers.nl/short%20metric.html" target="_blank">25 januari 2015 - Short Metric, Zwartmikkers in Middelbeers</a></li>
-        <li><a href="http://www.eilandschutters.nl/files/WA%202015%20flyer.pdf" target="_blank">14-15 februari 2015 - Winteranimal, Eilandschutters op Texel</a></li>
-    </ul>
 {% endblock %}
