--- a/pages/links.html
+++ b/pages/links.html
@@ -30,7 +30,7 @@
                 <li><a target="_blank" href="http://www.eikelswordeneiken.nl/">Eikels worden Eiken</a></li>
                 <li><a target="_blank" href="http://www.ace-xclusive.nl/">A.C.E. X-Clusive</a></li>
                 <li><a target="_blank" href="http://www.brediusschutters.nl/">Brediusschutters</a></li>
-                <li><a target="_blank" href="http://www.handboogsport.nl/breedtesport/kaart/kaart.php">(overzicht Nederland)</a></li>
+                <li><a target="_blank" href="http://www.handboogsport.nl/nhb/verenigingen/alle-verenigingen/">(overzicht Nederland)</a></li>
             </ul>
         </td>
         <td style="width: 240px">
@@ -62,9 +62,7 @@
         <td>
             <h5>Overige</h5>
             <ul>
-                <li><a target="_blank" href="http://www.3dschieten.nl/">3D Schieten</a></li>
                 <li><a target="_blank" href="http://www.archery.tv">Archery TV</a></li>
-                <li><a target="_blank" href="http://www.performance-archery.tv/">Performance Archery TV</a></li>
                 <li><a target="_blank" href="http://handboog-schieten.jouwpagina.nl/">Handboogschieten jouwpagina</a></li>
                 <li><a target="_blank" href="http://handboog.startpagina.nl/">Handboogschieten startpagina</a></li>
                 <li><a target="_blank" href="http://www.archersreference.pwp.blueyonder.co.uk/">Archer's Reference</a></li>
@@ -74,6 +72,6 @@
 
     <h5>Persoonlijke website</h5>
     <ul>
-        <li><a target="_blank" href="http://arne.delaat.net/">Arne de Laat</a></li>
+        <li><a target="_blank" href="http://arne.delaat.net/">153957 Photography</a></li>
     </ul>
 {% endblock %}
