--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,26 +83,26 @@
     var _mailt = "mailto:"
     var _extger = "shs-geronimo.org";
     var _at = "@";
-    var _ditmar = "voorzitter"
-    var _ditmar2 = _mailt+_ditmar+_at+_extger;
+    var _voor = "voorzitter"
+    var _voor2 = _mailt + _voor + _at + _extger;
     var _sec = "secretaris"
-    var _sec2 = _mailt+_sec+_at+_extger;
+    var _sec2 = _mailt + _sec + _at + _extger;
     var _wilde = "penningmeester"
-    var _wilde2 = _mailt+_wilde+_at+_extger;
-    var _maagdenberg = "rayonzaken"
-    var _maagdenberg2 = _mailt+_maagdenberg+_at+_extger;
+    var _wilde2 = _mailt + _wilde + _at + _extger;
+    var _rayon = "rayonzaken"
+    var _rayon2 = _mailt + _rayon + _at + _extger;
     var _dieho = "k.dieho"
-    var _dieho2 = _mailt+_dieho+_at+_extger;
+    var _dieho2 = _mailt + _dieho + _at + _extger;
     var _doorn = "qeqe53wd"
     var _doorn1 = "kpnmail.nl"
-    var _doorn2 = _mailt+_doorn+_at+_doorn1;
-    var _delaat = "webmaster"
-    var _delaat2 = _mailt+_delaat+_at+_extger;
-    document.getElementById('email_voor').href = _ditmar2;
-    document.getElementById('email_rayon').href = _maagdenberg2;
+    var _doorn2 = _mailt + _doorn + _at + _doorn1;
+    var _web = "webmaster"
+    var _web2 = _mailt + _web + _at + _extger;
+    document.getElementById('email_voor').href = _voor2;
+    document.getElementById('email_rayon').href = _rayon2;
     document.getElementById('email_sec').href = _sec2;
     document.getElementById('email_sec2').href = _sec2;
     document.getElementById('email_penning').href = _dieho2;
-    document.getElementById('email_web').href = _delaat2;
+    document.getElementById('email_web').href = _web2;
     document.getElementById('email_beheer').href = _doorn2;
 {% endblock %}
