Temporarily disable the registration form.

--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -29,10 +29,17 @@
 
     <h3>Aanmeld formulier</h3>
 
+    <p>
+        <strong>Het inschrijf formulier is tijdelijk gesloten, probeer
+        het over een paar weken nog eens, of stuur een mail naar de secretaris!</strong>
+    </p>
+
+<!-- 
     <div class="cognito">
         <script src="https://services.cognitoforms.com/s/vs6FWsIiSEGGFdPsq90Erg"></script>
         <script>Cognito.load("forms", { id: "1" });</script>
     </div>
+ -->
 {% endblock %}
 
 {% block script %}
