--- a/pages/adres.html
+++ b/pages/adres.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_adres %}active{% endblock %}
 {% block title %}{{ block.super }} : Adres{% endblock %}
 
 {% block banner %}ADL_135275.png{% endblock %}
