--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_contact %}active{% endblock %}
 {% block title %}{{ block.super }} : Bestuur en contact{% endblock %}
 
 {% block banner %}ADL_115745.png{% endblock %}
