--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_fotos %}active{% endblock %}
 {% block title %}{{ block.super }} : Foto's{% endblock %}
 
 {% block banner %}ADL_104656_b.png{% endblock %}
