--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_lidmaatschap %}active{% endblock %}
 {% block title %}{{ block.super }} : Lidmaatschap{% endblock %}
 
 {% block banner %}ADL_104656.png{% endblock %}
@@ -48,6 +49,7 @@
     </table>
 
     <p class="textw">
+        Deze prijzen zijn een indicatie, mogelijk zijn deze inmiddels anders.<br>
         Het is mogelijk om deze contributie in termijnen te betalen.
     </p>
 {% endblock %}
