--- a/pages/links.html
+++ b/pages/links.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_links %}active{% endblock %}
 {% block title %}{{ block.super }} : Links{% endblock %}
 
 {% block banner %}ADL_135309.png{% endblock %}
