--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_openingstijden %}active{% endblock %}
 {% block title %}{{ block.super }} : Openingstijden{% endblock %}
 
 {% block banner %}ADL_135222.png{% endblock %}
