--- a/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
+++ b/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %}
+{% extends "activiteiten.html" %}
 
+{% block activiteiten_sinterkerstnieuwjaarsverschieting %}active{% endblock %}
 {% block title %}{{ block.super }} : SinterKerstNieuwjaarsverschieting{% endblock %}
-
-{% block banner %}ADL_135176.png{% endblock %}
-{% block logo-position %}top: -160px; left: 490px;{% endblock %}
 
 {% block body %}
     <h2>SinterKerstNieuwjaarsverschieting</h2>
