--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block current_filmpjes %}active{% endblock %}
 {% block title %}{{ block.super }} : Filmpjes{% endblock %}
 
 {% block banner %}ADL_135292.png{% endblock %}
